# prod-bot

./: .gitignore  Makefile  README.md  generate_pocket_access_token.sh  pyproject.toml
scripts/: update_bot.py
src/: bot.py  lambda_function.py  pocket_api.py  pocket_bot.py  weather_bot.py
terraform/: .terraform.lock.hcl  lambda.tf  lambda_triggers.tf  main.tf  output.tf  provider.tf  variables.tf
